# blog-project

./: Cargo.toml  README.md
blog-cli/: Cargo.toml
blog-cli/src/: main.rs
blog-client/: Cargo.toml  build.rs
blog-client/src/: error.rs  http_client.rs  lib.rs  pod.rs
blog-client/src/grpc_client/: mod.rs
blog-server/: Cargo.toml  build.rs
blog-server/.sqlx/: query-080b76031d6929645e92630a8c37c197ea28c7be5be921f820138bac6e5179f5.json  query-137472f9baf7b6f6688fb2e73c3aaa75df9015dd94c126f5bf57870642340d4f.json  query-2dba8769607957454e06c0ca3be183ef61fec2d1a945b12e15d284f3cb3b371c.json  query-41444b9af51f84bc4ab9b0e4c1b3fb520ffd7fcb17a26c181def8feebdd1aa7c.json  query-63a271d7fadc11483589a9ecab2c8174069cbc5ffe25b90fc0a9f0552bbf4a71.json  query-6f4ff928d33b7a5eb86562dc05aed2b8d8dbb03e78af2c972996354b2cc72d71.json  query-921e3d1e5e19e7a4dfb01e335abb0762eb2e156aa7d2b70f31c353df85364fbc.json  query-a4b61cfb5cae18f3facc9573a922089e1318d30364d6983622242c3a70c5f841.json  query-afe0ee2a6878b816e1ef7e4aa6be0ae68c25519004f8cc4b0305b176bf827dcc.json  query-bf8416fe7f83aacf6cb3fc7d22e29c0a46c40677a1e2077dcae47d3f854fa490.json  query-bfc252dc4a187bafc2f3e2c2301fef9404510259d42eb22253bf55568112cf41.json  query-ce0241d8b1b14901641e6dc74fb1fd8bebab78c7cd7feea22293664c124b375b.json  query-e47e31b192147257acc3271908a34a924ad1d1d85e9af5bbcfedba4a14da59f6.json  query-eb238125465af1b8d8639f0959bcbb5a59b3ec7fc85c64ea4cf65bf3c52ae350.json
blog-server/migrations/: 20260213185016_create_users.sql  20260213185117_create_posts.sql
blog-server/proto/: blog.proto
blog-server/src/: main.rs
blog-server/src/application/: auth_service.rs  blog_service.rs
blog-server/src/data/: post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  mod.rs  post.rs  user.rs
blog-server/src/infrastructure/: config.rs  database.rs  hash.rs  jwt.rs  logging.rs  mod.rs
blog-server/src/presentation/: http_handlers.rs  middleware.rs  mod.rs
blog-server/src/presentation/grpc_service/: mod.rs
blog-wasm/: Cargo.toml  index.html
blog-wasm/src/: lib.rs  pod.rs
