[workspace]
members = [
    "blog-server",
    "blog-client",
    "blog-cli",
    "blog-wasm"
]
resolver = "2"

[workspace.dependencies]
tonic = "0.14.3"
prost = "0.14.3"
prost-types = "0.14.3"
tonic-prost-build = "0.14.3"
dotenv = "0.15.0"
jsonwebtoken = "10.3.0"
serde = "1.0.228"
serde_json = "1.0.149"
chrono = "0.4.43"
anyhow = "1.0.101"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"