[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
dotenv = {workspace = true}
jsonwebtoken = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}

[build-dependencies]
tonic-prost-build = {workspace = true}
