[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.13.2", features = ["json", "query"]}
tonic = {workspace = true}
prost = {workspace = true}
tonic-prost = {workspace = true}
prost-types = {workspace = true}
dotenv = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
chrono = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}

[build-dependencies]
tonic-prost-build = {workspace = true}
