[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-web-httpauth = "0.8.2"
actix-cors = "0.7.1"
sqlx = {version = "0.8.6", features = ["postgres", "migrate", "macros"]}
argon2 = "0.5.3"
tracing-actix-web = "0.7.21"
tonic = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
dotenv = {workspace = true}
jsonwebtoken = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
chrono = {workspace = true}
thiserror = {workspace = true}
anyhow = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

[build-dependencies]
tonic-prost-build = {workspace = true}
