[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-web-httpauth = "0.8.2"
actix-cors = "0.7.1"
sqlx = {version = "0.8.6", features = ["postgres", "migrate", "macros", "runtime-tokio", "chrono"]}
argon2 = "0.5.3"
tracing-actix-web = "0.7.21"
jsonwebtoken = "10.3.0"
tonic = {workspace = true}
tonic-prost = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
dotenv = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
chrono = {workspace = true}
thiserror = {workspace = true}
anyhow = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
derive_more = {workspace = true}
tokio = {workspace = true}

[build-dependencies]
tonic-prost-build = {workspace = true}
