[package]
name = "blog-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.63"
web-sys = {version = "0.3.90", features = ["Document", "Element", "HtmlElement", "Window", "Request", "RequestInit", "Response", "Headers", "console", "Storage"]}
gloo-net = {version = "0.6.0", features = ["http"]}
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.90"
jsonwebtoken = {version = "10.3.0", features = ["rust_crypto"]}
getrandom = { version = "0.2", features = ["js"] }
serde = {workspace = true}
serde_json = {workspace = true}

[lib]
crate-type = ["cdylib"]